<resources>
    <string name="app_name">Piller</string>
    <string name="sunday_label">Sunday</string>
    <string name="monday_label">Monday</string>
    <string name="tuesday_label">Tuesday</string>
    <string name="wednesday_label">Wednesday</string>
    <string name="thursday_label">Thursday</string>
    <string name="friday_label">Friday</string>
    <string name="saturday_label">Saturday</string>
    <string name="manage_account_label">Manage Account</string>
    <string name="help_label">Help</string>
    <string name="log_out_label">Log out</string>
    <string name="change_email_label">Change Email</string>
    <string name="change_name_label">Change Name</string>
    <string name="change_password_label">Change Password</string>
    <string name="delete_account_label">Delete Account</string>
    <string name="supervisors">Supervisors</string>
    <string name="manage_supervisors">Manage supervisors</string>
    <string name="supervisors_list">Supervisors list</string>
    <string name="supervisors_nlist">Supervisors\nlist</string>
    <string name="select_number_of_missed_days">Select number of missed days:</string>
    <string name="note_supervisors_will_be_notified_by_email_each_ntime_the_main_profile_user_will_miss_his_drug_intake">
        Note: Supervisors will be notified by email each\ntime the main profile user will miss his drug intake.</string>
    <string name="add_a_nnew_supervisor">Add a\nnew supervisor</string>
    <string-array name="threshold_alarm">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="drug_repeat_options">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string-array name="drug_should_repeat">
        <item>Does not repeat</item>
        <item>Repeat on…</item>
    </string-array>
    <string-array name="drug_dosage">
        <item>pills</item>
        <item>mg</item>
        <item>g</item>
        <item>IU</item>
        <item>mcg</item>
        <item>mEq</item>
    </string-array>
    <string-array name="monthly_weekly">
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="fab_pill_image_label">Pill Image</string>
    <string name="fab_box_image">Box Image</string>
    <string name="fab_drug_name">Drug Name</string>
    <string name="bottom_nav_home_label">Home</string>
    <string name="bottom_nav_full_view_label">Full View</string>
    <string name="bottom_nav_profile_label">Profile</string>
    <string name="nd_enter_drug_name_label">Enter Drug Name</string>
    <string name="nd_search_label">Search</string>
    <string name="nd_next_btn">Next</string>
    <string name="ndo_new_drug_name_label">New Drug Name</string>
    <string name="ndo_first_occurrence_date">First Occurrence Date</string>
    <string name="ndo_first_occurrence_time">First Occurrence Time</string>
    <string name="ndo_add_drug">Add Drug</string>
    <string name="notification_channel_description">It\'s time to take your medicine!</string>
    <string name="ndo_repeats_on_label">Repeats Every</string>
    <string name="ndo_weekday_s">S</string>
    <string name="ndo_weekday_m">M</string>
    <string name="ndo_weekday_t">T</string>
    <string name="ndo_weekday_w">W</string>
    <string name="ndo_weekday_f">F</string>
    <string name="di_drug_image_desc">Drug Image</string>
    <string name="di_medicine_taken">Medicine taken!</string>
    <string name="di_00_00">00:00</string>
    <string name="di_drug_name">Drug Name</string>
    <string name="di_menu_delete">Delete</string>
    <string name="di_menu_edit">Edit</string>
    <string name="di_take">Take</string>
    <string name="di_un_take">Un-take</string>
    <string name="action_notify_medication">It\'s time to take your medicine!</string>
    <string name="action_refill_reminder">It\'s time to refill your medicine!</string>
    <string name="ma_show_notifications">Show Notifications</string>
    <string name="help_question">help question</string>
    <string name="help_answer">help answer</string>
    <string name="eli_drug_name">Drug name</string>
    <string name="eli_intake_time">intake time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dbi_drug_image">Drug Image</string>
    <string name="dbi_capture_image">Capture Image</string>
    <string name="dbi_search_by_image">Search By Image</string>
    <string name="ndo_last_occurrence_date">Last Occurrence Date</string>
    <string name="ndo_set_last_occurrence_date">Set Last Occurrence Date</string>
    <string name="ndo_select_dosage">Select Dosage:</string>
    <string name="ndo_1">1</string>
    <string name="di_dosage">dosage</string>
    <string name="ndo_start_taking_medicine_on">Start Taking Medicine On:</string>
    <string name="ndo_enter_the_amount_of_meds_you_currently_have_to_get_a_refill_reminder">Enter the amount of meds you currently have to get a refill reminder</string>
    <string name="ndo_refill_reminder">Refill reminder</string>
    <string name="ndo_when_i_have_20_meds_remaining">When I have 20 meds remaining</string>
    <string name="ndo_what_time">What time?</string>
    <string name="ndo_11_00">11:00</string>
    <string name="di_you_have_20_meds_left">You have 20 meds left</string>
    <string name="ocr_drug_box">Drug Box</string>
    <string name="ocr_press_on_the_camera_to_take_picture_of_your_medicine_box">Press on the camera to take picture of your medicine box.</string>
    <string name="nd_search_result"><u>Search Result:</u></string>
    <string name="wdi_drug_name">Drug Name</string>
    <string name="wdi_drug_intake_time">Drug Intake Time</string>
    <string name="wdi_intake_status">Intake Status</string>
    <string name="wdc_day">Day</string>
    <string name="wdc_day_number">15</string>
    <string name="di_edit">Edit</string>
    <string name="di_delete">Delete</string>
    <string name="di_taken">Taken</string>
    <string name="di_schedule">Schedule</string>
    <string name="do_start_date">Start date</string>
    <string name="do_end_date">End date</string>
    <string name="do_04_04_21">04/04/21</string>
    <string name="do_frequency">Frequency</string>
    <string name="do_daily">Daily</string>
    <string name="do_at">At</string>
    <string name="do_16_30">16:30</string>
    <string name="do_add_new_medicine">Add new medicine</string>
    <string name="do_dosage">Dosage</string>
    <string name="do_pills">Pills</string>
    <string name="do_refill_reminder">Refill reminder</string>
    <string name="go_back">Go back</string>
    <string name="do_freq_close">Close</string>
    <string name="do_freq_frequency">Frequency</string>
    <string name="do_freq_repeat_once">Repeat once</string>
    <string name="do_freq_repeat_on">Repeat on…</string>
    <string name="do_freq_done">Done</string>
    <string name="none">None</string>
    <string name="do_add_new_occurrence">Add new occurrence +</string>
    <string name="chooseValidDrug">Please choose a valid drug!</string>
    <string name="searchByPillImage">Search by pill image</string>
    <string name="searchByBoxImage">Search by box image</string>
    <string name="searchByName">Search by name</string>
    <string name="interactionPopupFragment">InteractionPopupFragment</string>
    <string name="timeFormat">HH:mm</string>
    <string name="dateFormat">dd/MM/yyyy</string>
    <string name="deletePopupTitle">Are you sure you want to delete this drug?</string>
    <string name="deleteAllOccurrences">Delete all occurrences</string>
    <string name="deleteThisAndFutureOccurrences">Delete this and future occurrences</string>
    <string name="editPopupTitle">Edit</string>
    <string name="editAllOccurrences">Edit all occurrences</string>
    <string name="editThisAndFutureOccurrences">Edit this and future occurrences</string>
    <string name="pleaseEnterAValidDosage">Please enter a valid dosage</string>
    <string name="minDosage">0</string>
    <string name="defaultDosage">1</string>
    <string name="saveChanges">Save changes</string>
    <string name="newDrugAdded">New drug added!</string>
    <string name="drugOccurrenceWasUpdated">Drug occurrence was updated!</string>
    <string name="dosageTitle">Dosage</string>
    <string name="refillReminderTitle">Refill reminder</string>
    <string name="cancel">Cancel</string>
    <string name="invalidRefill">Please enter the amount of meds you currently have</string>
    <string name="authenticationId">id</string>
    <string name="authenticationEmail">email</string>
    <string name="authenticationProfileName">profileName</string>
    <string name="authenticationProfileId">profileId</string>
    <string name="authenticationGoogleUser">googleUser</string>
    <string name="mainUserRelation">main-user</string>
    <string name="imageDateFormat">yyyyMMdd_HHmmss</string>
    <string name="imageNamePrefix">IMG_</string>
    <string name="imageNameSuffix">_</string>
    <string name="imageNameExtension">.jpg</string>
    <string name="dotProvider">.provider</string>
    <string name="noDrugNameError">Please enter drug name!</string>
    <string name="drugFrequencyNext">Next</string>
    <string name="drugFrequencyDone">Done</string>
    <string name="daysFrequencyString">days</string>
    <string name="weeksFrequencyString">weeks</string>
    <string name="monthsFrequencyString">months</string>
    <string name="yearsFrequencyString">years</string>
    <string-array name="daysName">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="drugInteractionsIntentTag">drug_interactions</string>
    <string name="fullViewPopupFragmentTag">FullViewPopupFragment</string>
    <string name="futureDayFullView">#d9d9d9</string>
    <string name="send">Send</string>
    <string name="enterYourEmail">Enter your email:</string>
    <string name="loginTag">LOGIN_TAG</string>
    <string name="emailPasswordInvalid">Email or Password cannot be null or empty.</string>
    <string name="resetPassword">Reset Password</string>
    <string name="howCanIContactPiller">How Can I Contact Piller?</string>
    <string name="contactPiller">Send an email to: piller.inc1@gmail.com</string>
    <string name="howCanIAddaNewMedicine">How Can I Add a New Medicine?</string>
    <string name="addNewMedicineWays">In home view, tap on the plus button on bottom right and then there are 2 options:\n1) By name\n2) By box image\n3) By pill image</string>
    <string name="howToStopReceivingNotifications">How To Stop Receiving Notifications?</string>
    <string name="stopReceivingNotificationsInstruction">Press on person section on bottom left, then settings and turn off the notifications</string>
    <string name="mainSpaceUser">Main User</string>
    <string name="addANewProfileTitle">ADD A NEW PROFILE</string>
    <string name="addANewProfileAddBtn">ADD PROFILE</string>
    <string name="profileNameEmptyError">Profile name cannot be empty</string>
    <string name="passwordValueIsEmpty">Password value is empty</string>
    <string name="addSupervisorWindowTitle">ADD A NEW SUPERVISOR</string>
    <string name="addSupervisorWindowAddButton">Add supervisor</string>
    <string name="addSupervisorWindowEmptyName">Supervisor name cannot be empty</string>
    <string name="addSupervisorWindowEmptyEmail">Supervisor email cannot be empty</string>
    <string name="removeSupervisorWarning">%1$s will be removed from\nyour supervisor list.</string>
    <string name="intakeReminderTitle">%1$s, It\'s time to take your medicine!</string>
    <string name="di_current_meds_hint">100</string>
</resources>